# internal-developer-platform-cli

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
idp_cli/: __init__.py  cli.py
idp_cli/commands/: __init__.py  api_documentation.py  cost_management.py  create_service.py  dependency_viz.py  enhanced_health.py  environment_management.py  environment_status.py  health_check.py  list_templates.py  security_scanning.py  service_management.py
idp_cli/config/: __init__.py  settings.py
idp_cli/integrations/: __init__.py  docker.py  docs.py  kubernetes.py
idp_cli/integrations/github/: __init__.py  actions.py  gitlab_ci.py  jenkins.py
idp_cli/integrations/gitops/: __init__.py  argocd.py  flux.py
idp_cli/integrations/monitoring/: __init__.py  prometheus.py
idp_cli/templates/: __init__.py  base.py  go_api.py  ml_inference.py  nextjs_fullstack.py  node_api.py  python_api.py  python_cli.py  python_graphql.py  react_frontend.py  registry.py  rust_api.py  static_site.py  worker.py
idp_cli/utils/: __init__.py  console.py  file_utils.py
tests/: __init__.py  test_cli.py  test_create_service.py  test_dependency_viz.py  test_environment_status.py  test_health_check.py  test_templates.py  test_utils.py
web-ui/: README.md  package-lock.json  package.json
web-ui/src/app/: globals.css  layout.tsx  page.tsx
web-ui/src/app/create/: page.tsx
web-ui/src/app/templates/: page.tsx
web-ui/src/components/: navbar.tsx  scroll-to-top.tsx  theme-toggle.tsx
web-ui/src/components/ui/: card.tsx
web-ui/src/lib/: data.ts
web-ui/src/lib/generators/: base.ts  cron-job.ts  database-service.ts  dotnet-api.ts  event-driven.ts  go-api.ts  java-spring.ts  microservice.ts  ml-inference.ts  nextjs-fullstack.ts  node-api.ts  python-api.ts  python-cli.ts  python-graphql.ts  react-frontend.ts  registry.ts  rust-api.ts  static-site.ts  vue-frontend.ts  worker.ts
web-ui/src/lib/utils/: names.ts  storage.ts  zip.ts
(+1 files in other folders)
