[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idp-cli"
version = "0.2.0"
description = "Internal Developer Platform CLI — Self-service infrastructure and service creation for developers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "H A R S H H A A", email = "harshhaa03@gmail.com"},
]
keywords = ["cli", "platform-engineering", "devops", "kubernetes", "microservices", "idp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
]

[project.scripts]
idp-cli = "idp_cli.cli:main"

[project.urls]
Homepage = "https://github.com/NotHarshhaa/internal-developer-platform-cli"
Repository = "https://github.com/NotHarshhaa/internal-developer-platform-cli"
Issues = "https://github.com/NotHarshhaa/internal-developer-platform-cli/issues"

[tool.setuptools.packages.find]
include = ["idp_cli*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
